manifests/apps/testweb/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: testweb-service
  name: testweb-service
  namespace: testweb
spec:
  ports:
  - appProtocol: http
    name: web
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: testweb
  type: ClusterIP
