manifests/apps/testweb/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: testweb
  namespace: testweb
spec:
  hostnames:
  - testweb.ucdialplans.com
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  rules:
  - backendRefs:
    - kind: Service
      name: testweb-service
      namespace: testweb
      port: 8080
